# python-project-83

./: .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml  requirements.txt
.github/workflows/: pyci.yml
page_analyzer/: __init__.py  app.py  database.sql  db.py  html_parse.py  parse.py
page_analyzer/templates/: footer.html  head.html  header.html  index.html
page_analyzer/templates/urls/: index.html  show.html
tests/: conftest.py  test_app.py  test_db.py  test_html_parse.py  test_parse.py
tests/fixtures/: hexlet.html  hexlet_parsed.json  index.json  template_urls.html  test_urls.json  url_checks_1.json  url_checks_2.json  url_checks_3.json  urls_checks.json
