[tool.poetry]
name = "hexlet-code"
version = "0.2.0"
description = ""
authors = ["Evgeny Sokolov <sokolovsolod@gmail.com>"]
readme = "README.md"

packages = [
  { include = "page_analyzer" },
]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"
gunicorn = "^20.1.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
