[tool.poetry]
name = "hexlet-code"
version = "0.2.1"
description = "Educational project #3 on Hexlet platform (spec: Python developer)"
authors = ["Evgeny Sokolov <sokolovsolod@gmail.com>"]
readme = "README.md"

packages = [
  { include = "page_analyzer" },
]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"
gunicorn = "^20.1.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
